# Catalyst-MCP

./: .env.example  .gitignore  COMPLIANCE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  auth.py  client.py  config.py  server.py
